attempt to fix spacing at top with lowercase titles

--- a/sass/_kui.scss
+++ b/sass/_kui.scss
@@ -128,7 +128,7 @@ hr {
 /* /social-links */
 
 #content{
-  margin-top: 20px;
+  margin-top: -10px;
   margin-bottom: 20px;
   a{
     color: #33c;
@@ -152,7 +152,8 @@ hr {
   }
 }
 .entry > header{
-  margin: 50px 0px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 
